--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-	<button block-inline-button="#">Inline</button>
-	<div block-inline-div="#">Block</div>
-	<span block-inline-span="#">Inline</span>
-	<p block-inline-p="">Block</p>
-	<input block-inline-input="Inline">
-	<cite block-inline-cite="#">Inline</cite>
+	<button block-inline-button="button">Inline</button>
+	<div block-inline-div="div">Block</div>
+	<span block-inline-span="span">Inline</span>
+	<p block-inline-p="peragraph">Block</p>
+	<input block-inline-input="input">
+	<cite block-inline-cite="#cite">Inline</cite>
 	<code block-inline-code="#">Inline
 	</code>
 	<h1 block-inline-h1="#">Block</h1>
