--- a/main.html
+++ b/main.html
@@ -7,17 +7,36 @@
 </head>
 
 <body>
-	<button block-inline-button="button">Inline</button>
-	<div block-inline-div="div">Block</div>
-	<span block-inline-span="span">Inline</span>
-	<p block-inline-p="peragraph">Block</p>
-	<input block-inline-input="input">
-	<cite block-inline-cite="#cite">Inline</cite>
-	<code block-inline-code="#">Inline
-	</code>
-	<h1 block-inline-h1="#">Block</h1>
-	<sup block-inline-sup="#">Inline</sup>
-	<sub block-inline-sub=#>Inline</sub>
+<div>
+	<button data-ns-test="block-inline-button">Test1</button>
+</div>
+<div>
+	<div data-ns-test="block-inline-div">Test2</div>
+</div>
+<div>
+	<span data-ns-test="block-inline-span">Test3</span>
+</div>
+<div>
+	<p data-ns-test="block-inline-p">Test4</p>
+</div>
+<div>
+	<input data-ns-test="block-inline-input">Test5</input>
+</div>
+<div>
+	<cite data-ns-test="block-inline-cite">Test6</cite>
+</div>
+<div>
+	<code data-ns-test="block-inline-code">Test7</code>
+</div>
+<div>
+	<h1 data-ns-test="block-inline-h1">Test8</h1>
+</div>
+<div>
+	<sup data-ns-test="block-inline-sup">Test9</sup>
+</div>
+<div>
+	<sub data-ns-test="block-inline-sub">Test10</sub>
+</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
