--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 <div>
 	<button data-ns-test="block-inline-button">Test1</button>
-	<button data-ns-test="block-inline-button">Test2</button>Answer:inline
+	<button data-ns-test="block-inline-button">Test2</button>Answer:Inline
 </div>
 <div>
 	<div data-ns-test="block-inline-div">Test1</div>
@@ -17,35 +17,35 @@
 </div>
 <div>
 	<span data-ns-test="block-inline-span">Test1</span>
-	<span data-ns-test="block-inline-span">Test2</span>
+	<span data-ns-test="block-inline-span">Test2 Answer:Inline</span>
 </div>
 <div>
 	<p data-ns-test="block-inline-p">Test1</p>
-	<p data-ns-test="block-inline-p">Test2</p>
+	<p data-ns-test="block-inline-p">Test2 Answer:Block</p>
 </div>
 <div>
 	<input data-ns-test="block-inline-input">Test1</input>
-	<input data-ns-test="block-inline-input">Test2</input>
+	<input data-ns-test="block-inline-input">Test2 Answer:Inline</input>
 </div>
 <div>
 	<cite data-ns-test="block-inline-cite">Test1</cite>
-	<cite data-ns-test="block-inline-cite">Test2</cite>
+	<cite data-ns-test="block-inline-cite">Test2 Answer:Inline</cite>
 </div>
 <div>
 	<code data-ns-test="block-inline-code">Test1</code>
-	<code data-ns-test="block-inline-code">Test2</code>
+	<code data-ns-test="block-inline-code">Test2 Answer:Inline</code>
 </div>
 <div>
 	<h1 data-ns-test="block-inline-h1">Test1</h1>
-	<h1 data-ns-test="block-inline-h1">Test2</h1>
+	<h1 data-ns-test="block-inline-h1">Test2 Answer:Block</h1>
 </div>
 <div>
 	<sup data-ns-test="block-inline-sup">Test1</sup>
-	<sup data-ns-test="block-inline-sup">Test2</sup>
+	<sup data-ns-test="block-inline-sup">Test2 Answer:Inline</sup>
 </div>
 <div>
 	<sub data-ns-test="block-inline-sub">Test1</sub>
-	<sub data-ns-test="block-inline-sub">Test2</sub>
+	<sub data-ns-test="block-inline-sub">Test2 Answer:Inline</sub>
 </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
