--- a/main.html
+++ b/main.html
@@ -9,11 +9,11 @@
 <body>
 <div>
 	<button data-ns-test="block-inline-button">Test1</button>
-	<button data-ns-test="block-inline-button">Test2</button>Answer:Inline
+	<button data-ns-test="block-inline-button">Test2=Answer:Inline</button>
 </div>
 <div>
 	<div data-ns-test="block-inline-div">Test1</div>
-	<div data-ns-test="block-inline-div">Test2 Answer:Block</div>
+	<div data-ns-test="block-inline-div">Test2=Answer:Block</div>
 </div>
 <div>
 	<span data-ns-test="block-inline-span">Test1</span>
