--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 </div>
 <div>
 	<div data-ns-test="block-inline-div">Test1</div>
-	<div data-ns-test="block-inline-div">Test2=Answer: Block</div>
+	<div data-ns-test="block-inline-div">Test2 Answer: Block</div>
 </div>
 <div>
 	<span data-ns-test="block-inline-span">Test1</span>
